# WinFaceUnlock

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_EN.md  convert_h5_to_onnx.py  design.md  vcpkg.json
.cargo/: config.toml
apps/control-tauri/: index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/control-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/control-tauri/src-tauri/capabilities/: default.json
apps/control-tauri/src-tauri/src/: lib.rs  main.rs
apps/setup-winui/: README.md  WinFaceUnlock.Setup.sln
crates/common_protocol/: Cargo.toml
crates/control_backend/: Cargo.toml
crates/control_backend/src/: lib.rs
crates/control_protocol/: Cargo.toml
crates/control_status/: Cargo.toml
crates/control_status/src/: lib.rs
crates/control_tray/: Cargo.toml  build.rs
crates/control_tray/src/: main.rs  windows_tray.rs
crates/credential_store/: Cargo.toml  build.rs
crates/credential_store/src/: error.rs  file_store.rs  key_file.rs  key_protector.rs  lib.rs  master_key.rs  repository_store.rs  secure_random.rs  user_record.rs
crates/credential_store/src/credential_blob/: format.rs  mod.rs  protector.rs  secret.rs
crates/credential_store/src/persistence/: migration.rs  mod.rs  records.rs  repository.rs  schema.rs  sqlcipher_repository.rs
crates/desktop_input/: Cargo.toml
crates/desktop_input_agent/: Cargo.toml
crates/desktop_input_agent/src/: main.rs
crates/diagnostics_cli/: Cargo.toml
crates/diagnostics_cli/src/: commands.rs  face_calibration.rs  face_debug_snapshot.rs  liveness_screen_debug.rs  main.rs  threshold_preview.rs
crates/face_auth/: Cargo.toml
crates/face_auth/src/: authenticator.rs  enrollment.rs  enrollment_steps.rs  guided_enrollment.rs  lib.rs  policy.rs  quality.rs
crates/face_engine/: Cargo.toml
crates/face_engine/src/: embedding.rs  hybrid_model.rs  lib.rs  opencv_model.rs  ort_model.rs  template.rs  types.rs
crates/face_liveness/: Cargo.toml
crates/face_liveness/src/: lib.rs  minifasnet.rs  opencv_debug.rs  policy.rs  preprocessing.rs  screen_replay.rs  types.rs
crates/face_pose/: Cargo.toml
crates/face_pose/src/: lib.rs
crates/face_pose_mediapipe/: Cargo.toml
crates/face_pose_mediapipe/src/: lib.rs  presence.rs
crates/hardware_binding/: Cargo.toml
crates/installer_cli/: Cargo.toml
crates/installer_cli/src/: commands.rs  installation.rs  main.rs  provider_registry.rs  resource_directory.rs  service_manager.rs  service_registry.rs  setup_backend.rs  setup_install.rs  setup_payload.rs  setup_preflight.rs  setup_presence.rs  user_startup.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: codec.rs  credential_material.rs  grant_registry.rs  lib.rs  named_pipe.rs  service_handler.rs
crates/setup_bootstrapper/: Cargo.toml  build.rs
crates/setup_bootstrapper/src/: main.rs
crates/video_provider/: Cargo.toml  build.rs
crates/video_provider/src/: frame.rs  frame_filter.rs  image_utils.rs  lib.rs  mf_bindings.rs  opencv_camera.rs  provider.rs
crates/win_service/: Cargo.toml
crates/win_service/src/: auth_issuer.rs  auth_orchestrator.rs  black_frame.rs  camera_backend_profiles.rs  camera_frame_recovery.rs  camera_runtime.rs  console_host.rs  credential_resolver.rs  credential_store_config.rs  desktop_agent_launcher.rs  desktop_input_state.rs  desktop_session.rs  lib.rs  main.rs  named_pipe_host.rs  presence_audit.rs  presence_camera.rs  presence_helper.rs  presence_mediapipe_pose_camera.rs  presence_mediapipe_pose_detector.rs  presence_monitor.rs  presence_person_camera.rs  presence_person_detector.rs  presence_policy.rs  presence_sampling_gate.rs  presence_service.rs  screen_snapshot.rs  service_config.rs  service_host.rs  service_log.rs  session_lock.rs  simulated_auth.rs
crates/windows_provider/: Cargo.toml
crates/windows_provider/src/: auth_package.rs  broker_client.rs  class_factory.rs  credential.rs  dll_exports.rs  dll_lifetime.rs  fields.rs  identifiers.rs  lib.rs  provider.rs  provider_config.rs  provider_log.rs  provider_state.rs  serialization.rs
docs/: AUTH_TRIGGER_ORCHESTRATION.md  CAMERA_BACKEND_PROFILING.md  CONTROL_FACE_PROFILE_DISPLAY_PLAN.md  CONTROL_FRONTEND_DECOUPLING_PLAN.md  CONTROL_FRONTEND_PROTOCOL_ARCHITECTURE.md  CONTROL_PROTOCOL_IMPLEMENTATION_PLAN.md  CONTROL_TRAY_ENTRYPOINT_ARCHITECTURE.md  CREDENTIAL_STORE_DESIGN.md  DESKTOP_INPUT_AND_USAGE_AUDIT_PLAN.md  DETAILED_IMPLEMENTATION_PLAN.md  FACE_ENROLLMENT_TEMPLATE_STRATEGY.md  FACE_MODULE_COMPOSITION.md  FACE_RECOGNITION_TECH_ROUTE_RESEARCH.md  FACE_RUNTIME_CONTROL_INTEGRATION_PLAN.md  FACE_WORKFLOW_MODULE_ARCHITECTURE_AND_LIVENESS.md  HANDOFF_2026_06_01_PHASE5_5.md  IMPLEMENTATION_PLAN.md  LOCAL_CAMERA_AUTH_CONFIG_FLOW.md  LOGON_UNLOCK_IPC_BLOCKING_ANALYSIS.md  LOGON_WAKE_MODES_DESIGN.md  MEDIAPIPE_BRIDGE_ABI.md  MULTI_FACE_PROFILE_PLAN.md  NATIVE_DLL_RUNTIME_COLLISION_FIX.md  PHASE3_SERVICE_VALIDATION.md  PHASE4_FACE_VALIDATION.md  PHASE5_5_FACE_AUTH_CALIBRATION.md  PHASE5_5_SCREEN_REPLAY_LIVENESS_VALIDATION.md  PHASE5_CREDENTIAL_PROVIDER_VALIDATION.md  PHASE5_LOGONUI_WAKE_FIX.md  PHASE6_5_PRESENCE_LOCK.md  PHASE8_GRAPHICAL_INSTALLER_PLAN.md  PRESENCE_LOCK_FINAL_SAMPLING_POLICY.md  PRESENCE_LOCK_SAMPLING_GATE_ARCHITECTURE.md  PRESENCE_MEDIAPIPE_POSE_LITE_IMPLEMENTATION.md  PRESENCE_ONNX_PERSON_DETECTOR_IMPLEMENTATION.md  PRESENCE_PERSON_DETECTION_TECHNICAL_PLAN.md  REFERENCE_AND_TECH_STACK.md  RUNTIME_SETTINGS_RELOAD_AND_INPUT_TRIGGER.md  SETUP_BACKEND_API_CONTRACT.md  TECHNICAL_ROUTE.md  (+3 more)
models/: README.md
native/mediapipe_bridge/: CMakeLists.txt  README.md
native/mediapipe_bridge/include/: winfaceunlock_mediapipe_bridge.h
native/mediapipe_bridge/src/: winfaceunlock_mediapipe_bridge.cpp
scripts/: build_mediapipe_bridge.ps1  build_setup_bundle.ps1  build_setup_package.ps1  build_setup_payload.ps1  build_setup_winui.ps1  fetch_mediapipe_pose_lite_model.ps1  run_control_app.ps1  run_control_tauri.ps1  run_control_tauri_release.ps1  validate_setup_package.ps1  vm_validate_face_flow.ps1
winfaceunlock-htmlUI/: README.md
(+56 files in other folders)
