[package]
name = "control_backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
control_protocol = { path = "../control_protocol" }
control_status = { path = "../control_status" }
serde_json = "1.0"

[lints]
workspace = true
