[package]
name = "control_backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
common_protocol = { path = "../common_protocol" }
control_protocol = { path = "../control_protocol" }
control_status = { path = "../control_status" }
ipc = { path = "../ipc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Security", "Win32_Security_Authorization", "Win32_System_Threading"] }

[lints]
workspace = true
