[package]
name = "control_status"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
common_protocol = { path = "../common_protocol" }
control_protocol = { path = "../control_protocol" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
windows-service = "0.8.1"
windows_provider = { path = "../windows_provider" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
] }

[lints]
workspace = true
