[package]
name = "control_tray"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies]
embed-resource = "3.0.9"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[lints]
workspace = true
