[package]
name = "face_engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opencv = { version = "0.98.2", default-features = false, features = ["clang-runtime", "calib3d", "objdetect", "imgcodecs", "imgproc"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
video_provider = { path = "../video_provider" }

[lints]
workspace = true
