[package]
name = "face_pose"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
face_engine = { path = "../face_engine" }
serde = { version = "1.0.228", features = ["derive"] }
video_provider = { path = "../video_provider" }

[lints]
workspace = true
