[package]
name = "face_pose_mediapipe"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
native-bridge = ["dep:windows-sys"]

[dependencies]
face_engine = { path = "../face_engine" }
face_pose = { path = "../face_pose" }
video_provider = { path = "../video_provider" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", optional = true, features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }

[lints]
workspace = true
