[package]
name = "ipc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
common_protocol = { path = "../common_protocol" }
control_protocol = { path = "../control_protocol" }
serde = "1.0.228"
serde_json = "1.0.145"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
] }

[lints]
workspace = true
