[package]
name = "win_service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
common_protocol = { path = "../common_protocol" }
control_protocol = { path = "../control_protocol" }
control_status = { path = "../control_status" }
credential_store = { path = "../credential_store" }
face_auth = { path = "../face_auth", default-features = false }
face_engine = { path = "../face_engine" }
face_liveness = { path = "../face_liveness" }
hardware_binding = { path = "../hardware_binding" }
ipc = { path = "../ipc" }
opencv = { version = "0.98.2", default-features = false, features = ["clang-runtime", "dnn", "imgproc"] }
ort = { version = "2.0.0-rc.12", default-features = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
video_provider = { path = "../video_provider" }
windows-service = "0.8.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_RemoteDesktop",
    "Win32_System_Shutdown",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[lints]
workspace = true
