[package]
name = "winfaceunlock-control-tauri"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "winfaceunlock_control_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "WinFaceUnlock"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
control_backend = { path = "../../../crates/control_backend" }
control_protocol = { path = "../../../crates/control_protocol" }
control_status = { path = "../../../crates/control_status" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
